# es-notebook

./: .gitignore  README.md  annual_template.tgz
.mycmds/: vimdiff_git.sh
2017/: .openwrt.txt.swp  01_bash.note.txt  0_note.txt  ACP.txt  ACP_CFG_Golden.txt  ASKEY  Askey  accounts_note.txt  annual.txt  bash_note.txt  crash_log_1112.txt  dhcp.txt  dtsi_uboot_kernel.txt  ecm.txt  extap_setup.sh  gdb.txt  git_note.txt  hacking.txt  icmpv6.txt  image_build.txt  image_summary.txt  indent.txt  ipv6.txt  jogging.txt  known_issue.txt  lesson_learn.txt  libwebsocket.txt  mld.txt  netifd.txt  note_2017.txt  openssl.txt  openwrt.txt  postgrelsql.txt  postgres.txt  qca_questions.txt  qca_scripts.txt  qca_wifi_study.txt  qos_note.txt  qsdk.txt  quick_cmds.txt  (+12 more)
2017/Summary/: .~lock.Daemons.ods#  Daemons.ods  whc_load_balancing.txt  whc_range_extender.txt
2017/Wifi-son/: ## WIFI-SON Configuration ##  GuestNetwork.txt  RE1_all_setup.txt  Repacd_study.txt  WiFiSONSummary.txt  wifi-son_script.txt
2017/acp_server/: json
2017/hyfi/: command_trials.txt  hy_hd.txt  pc_s_5.txt  pc_s_A.txt  td_s.txt
2017/nawds/: testnawds.sh
2017/opendatanow/: book_note.txt
2017/product_spec/: sintel.txt
2017/projects/: EAP  acp  eap  readme.txt
2017/qca_image_build/: image.build  tmp.NqCMrIAWNm
2017/qwrap_setup/: config_wireless_dut2_simple.txt  config_wireless_raw.txt  config_wirless_dut2_raw.txt  qwrap.txt
2017/repacd/: repacd.debug
2017/study/: kernel_hacking.txt
2017/work_src_backup/.mycmds/: alias.sh  todo
2018/: desgin_doc_template.docx  wifi_commands.md
2018/note/: ACP.txt  Askey  accounts_note.txt  bash_note.txt  beamforming.txt  brcm.md  bug_track.md  build-spf-6.0  build-spf-6.1  common.txt  contacts.txt  dbus.md  freeRadius.md  git_note.txt  goals.txt  igmp.md  igmp.txt  image_build.txt  job_samba_on_eai2204p.md  jogging.txt  kafka_note.md  lbd_trace.txt  linux-hid.txt  lte.txt  lte_3402.md  machine_learning.txt  macsec.md  markdown_example.md  openwrt.txt  pinctrl.txt  projects  qca_wifi_driver.txt  qsdk.txt  rrm_802.11k  sniffer.md  to_read.txt  todo.txt  usb_net.txt  usb_serial_driver.md  volcalbulary.txt  (+5 more)
2018/note/wifison/: cfg_cap.sh  cfg_re.sh  map_spf6.1.txt  wifison_spf6.1.txt  wps-behavior.md
2018/other/: carrer.goals
2018/recent/: cplogin_arcot.html  prjlists.xlsx
2019/: readme.txt
Notes/: BeagleBon.txt  BeagleBone.txt  ELSA 1.0 User Manual - draft.docx  ELSA_manaul.txt  ELSA_on_Linux.txt  ESLA_1.0 UM.docx  ESLA_1.0 UMdocx.docx  ESL_Manual.docx  Imgc_pp_Transfer.txt  Languages.xlsx  NB_PK.txt  RaspberryPi.txt  RelatedOpensources.txt  autoconf.txt  corona_sdk.txt  iot_survey.txt  libc_study.txt  linux_to_learn.txt  my_suggestion.txt  persona_evaluation_criteria.txt  python_qrcode.txt  templatel.docx  wsn_dev.txt
Notes/AC_AP/: ZyXel.txt  common idea.txt  tv.txt
Notes/Language/python/: python_re.txt  test.py
Notes/automation/: auto_test.txt
Notes/github/: libpcap_notes.txt
Notes/openWRT/: UCI.txt  basic.txt  build.txt  source_tree.txt
Notes/quick_ref/: linux_cmds.txt
Notes/vim/: vim_tips.txt  vimrc_basic.txt  vimrc_vundle
Notes/wifi/: 802.11n  802.11r_present  AP_10.4_CLI  load_balancing.txt
Notes/work/: BBB_CheckList.txt  BBB_LED_GPIO.txt  BBB_PINCTRL.txt  BBB_PMIC.txt  BBB_Uart.txt  BBB_Uboot.txt  BBB_eeprom_dump.txt  BBB_eth_wifi.txt  BBB_ethernet.txt  BBB_kernel.txt  BBB_rootfstxt.txt  BeagleBone.txt  Interference.txt  arch_iAP.txt  bbb_wifi_eth.txt  debug.txt  vim_cscope.txt
Notes/work/web/: translate.txt
annual_template/: readme.txt
cmake/postgre/: CMakeLists.txt  postgre.c  postgreConfig.h  postgreConfig.h.in  sample.c
cmake/tutorial/: CMakeLists.txt  License.txt  TutorialConfig.h  TutorialConfig.h.in  my_sqrt.c  tutorial.c
cmake/tutorial/my_sqrt/: CMakeLists.txt  my_sqrt.h
es_notebook/: es_notebook.wiki
es_notebook/data/: Beagle_Bone_Black_Notes.wiki  ScratchPad.wiki  WikiSettings.wiki  es_notebook.wiki  wikiovw.sli
fullstack/: .gitignore  docker.txt  kubenetes.txt  lxc.txt  webpack.txt
linux/: dtbs.txt  filesystem.txt  linux_tracing.txt  todo.txt
mycmds/: .bash_aliases  .install_mycmd.sh.swp  alias_base.txt  alias_temp  changecwd.py  hex  install_mycmd.sh  mycmds.sh  mynote.py  qcpall.py  todo.txt
samples/testserver/: .gitignore  CMakeLists.txt  archieve_me.sh  sample_echo_server.c  test-client.c  test-file-client.c  test-server-dumb-increment.c  test-server-file.c  test-server-file.h  test-server-pthreads.c  test-server.c  test-server.h  test-tty.c  uthash_sample.c  uthash_test.c  utlist_test.c  uv_signal.c  uv_workqueue.c
timemap/: Timemap.ods
vim/: cscope_maps.vim  customize.vim  myscheme.vim  notes.txt  vimrc
